Do not call setWrong if the password prompt has been cancelled by the user. Thanks Christopher January for the patch.

BUG: 230181

svn path=/trunk/KDE/kdenetwork/kopete/; revision=1223106